--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@sveltejs/vite-plugin-svelte": "^2.2.0",
     "@tsconfig/svelte": "^4.0.1",
     "@types/jquery": "^3.5.16",
+    "@types/luxon": "^3.3.0",
     "sass": "^1.62.1",
     "svelte": "^3.59.0",
     "svelte-preprocess": "^5.0.3",
@@ -18,6 +19,7 @@
     "deepmerge": "^4.3.1",
     "esbuild": "^0.17.18",
     "kleur": "^4.1.5",
+    "luxon": "^3.3.0",
     "magic-string": "^0.30.0",
     "ms": "^2.1.2",
     "nanoid": "^3.3.6",
