--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,10 @@
         "src/**/*.d.ts",
         "src/**/*.ts",
         "src/**/*.js",
-        "src/**/*.svelte"
+        "src/**/*.svelte",
+        "src/**/*"
     ],
+    "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
     "references": [
         {
             "path": "./tsconfig.node.json"
